Changelog
=========


4.0-dev - (unreleased)
----------------------
* Bugfix: Fixed date format [szabozo0 #4549]

* Change: removed the subtopics listing on topic entrance page. it was just
  redundant with the right navigation and tabs. most of the content is outdated.
  [demarant #4537]

* Change: Added themes tab on video edit page [szabozo0 #4510]

* Change: Added upgrade step to make IThemeTaggable navigation roots
  [voineali #4376]

* Change: #4206, #4458 Made the portlet themes as viewlet and registered below content title. css cleanup. [demarant]

* Bugfix: Fixed publishing dates on the portlets under Theme Centre [szabozo0 #4440]

* Change: Reactivated Products.PloneHelpCenter [szabozo0 #4430]

* Change: Removed the @@proxy view, using python:path() instead
  [tiberich #4257]

* Feature: Added upgrade steps
  [voineali #4392]

* Feature: Plone 4.x compatible release
  [ghicaale #4257]


1.6 - (2011-04-01)
------------------

* Cleanup: Removed PloneRSSPortlet [voineali #4169]

* Bug fix: Added translation domain to ZCML files [voineali #4139]


1.5 - (2011-03-09)
------------------

* Change: clean up package of pyflakes compiler warnings [ichimdav #4141]

* Change: clean up package of pylint violations [ichimdav #4140]


1.4 - (2011-03-01)
------------------

* Cleanup: Removed Product PloneRDFCalendar & RDFEvent type [ichimdav #2931]

* Cleanup: Removed Product CMFLinkChecker [batradav #3219]


1.3 - (2011-02-01)
------------------

* Bug fix: Return NotFound when feed id is not specified for list_feed view [tiberich #3893]


1.2 - (2010-11-26)
------------------

* Bug fix: don't fail on indicators theme if the faceted query can't be found [tiberich #3893]


1.1 - (2010-11-10)
------------------

* Bug fix: don't fail if a promotion doesn't have any themes set #3829 [vincisas]


1.0 - (2010-09-06)
------------------

* Feature: Added new faceted nav portlet. Replace old indicators RSS portlets with new one. [thuliper #3547]


0.9 - (2010-06-16)